edit colour scheme for footer section to improve visibility for visually impaired users (fix)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -427,3 +427,13 @@ hr{
     width: 100%;
   }
 }
+
+/* footer styles */
+.footer-color{
+  color: var(--washed-white);
+  text-shadow:-1px -1px 0 #000,
+  1px -1px 0 #000,
+  -1px 1px 0 #000,
+  1px 1px 0 #000;
+  font-size: 200%;
+}
